--- a/konfigurator.html
+++ b/konfigurator.html
@@ -680,8 +680,8 @@
                 <input
                         type="radio"
                         name="navigation-radio"
-                        value="konfigurator-working-version.html"
-                        onclick="navigateTo('konfigurator-working-version.html')"
+                        value="konfigurator.html"
+                        onclick="navigateTo('konfigurator.html')"
                 />
                 <p class="text">Zum Konfigurator</p>
             </label>
