--- a/systemkonfigurator.html
+++ b/systemkonfigurator.html
@@ -196,7 +196,7 @@
         <h2>Errechnete Konfiguration</h2>
         <div class="result">
           <strong>Ausgewählte Basis:</strong> <span id="configurationBase"></span><br>
-          <strong>Ausgabe (WA 400)</strong> <span id="recommendedModules"></span><br>
+          <strong>Ausgabe (WA 400):</strong> <span id="recommendedModules"></span><br>
           <strong></strong> <span id="systemsOverview"></span><br>
           <strong>Rückgabe (WR 1055 / 1270):</strong> <span id="containerReturn"></span><br>
           <strong>Rückgabe (WR 600):</strong> <span id="rowReturn"></span>
