--- a/settings.html
+++ b/settings.html
@@ -1,14 +1,14 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Konfigurator</title>
-  <link rel="stylesheet" href="styles.css" />
-  <link rel="stylesheet" href="stylesKonfi.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Einstellungen</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="stylesKonfi.css">
 </head>
 <body>
-
+    
   <div class="hintergrund"></div>
 
   <header>
@@ -23,7 +23,7 @@
           <span class="link-icon"><ion-icon name="home-outline"></ion-icon></span>
           <span class="link-title">Startseite</span>
         </a>
-        <a href="konfigurator.html" class="link active">
+        <a href="konfigurator.html" class="link">
           <span class="link-icon"><ion-icon name="construct-outline"></ion-icon></span>
           <span class="link-title">Konfigurator</span>
         </a>
@@ -35,7 +35,7 @@
           <span class="link-icon"><ion-icon name="document-text-outline"></ion-icon></span>
           <span class="link-title">Tabelle</span>
         </a>
-       <a href="settings.html" class="link">
+        <a href="settings.html" class="link active">
           <span class="link-icon"><ion-icon name="settings-outline"></ion-icon></span>
           <span class="link-title">Einstellungen</span>
         </a>
@@ -51,54 +51,13 @@
         <button id="clearStorageButton" onclick="confirmClear()"></button>
       </div>
 
-    <div class="projectName">
-      <label for="projectInput">Projektname:</label>
-      <input type="text" id="projectInput" placeholder="Projektname eingeben" />
-    </div>
 
 
-  </header>
-
-  <main>
-    <h1 class="title">Konfigurator</h1>
-    <div id="inventory-container" class="inventory-grid"></div>
-  </main>
-
-
-  <div class="config-buttons">
-  <button onclick="exportArticles()">
-    <div class="svg-wrapper-1">
-      <div class="svg-wrapper">
-        <!-- Download-Icon -->
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="30" height="30">
-          <path d="M5 20h14v-2H5m14-9h-4V3H9v6H5l7 7 7-7z" fill="white" />
-        </svg>
-      </div>
-    </div>
-    <span>Konfiguration exportieren</span>
-  </button>
-
-  <button onclick="importArticles()">  
-    <div class="svg-wrapper-1">
-      <div class="svg-wrapper">
-        <!-- Upload-Icon -->
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="30" height="30">
-          <path d="M5 20h14v-2H5m14-9h-4V3H9v6H5l7 7 7-7z" fill="white" transform="rotate(180 12 12)" />
-        </svg>
-      </div>
-    </div>
-    <span>Konfiguration importieren</span>
-  </button>
-  <input type="file" id="importFile" accept=".json" style="display: none" />
-</div>
-
-
-
+      
   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script src="script.js"></script>
-  <script src="exportImport.js"></script>
 
 </body>
 </html>
