--- a/index.html
+++ b/index.html
@@ -1,70 +1,29 @@
 <!DOCTYPE html>
-<html lang="de">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Konfigurator</title>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
-    <style>
-        body {
-            font-family: 'Roboto', sans-serif;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-            margin: 0;
-            background-image: url('EB5B88E4-48E0-49FA-ADBE-C6E8EEA42E4C.jpg');
-            background-size: cover;
-            background-repeat: no-repeat;
-            background-attachment: fixed;
-            background-color: rgba(0, 0, 0, 0.5);
-            color: #fff;
-            text-align: center;
-            padding: 0 20px;
-        }
-        h1 {
-            font-size: 3em;
-            margin-bottom: 20px;
-            color: #007BFF;
-        }
-        button {
-            font-size: 1.2em;
-            padding: 15px 30px;
-            background-color: #28a745;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: background-color 0.3s;
-            margin-bottom: 10px;
-        }
-        button:hover {
-            background-color: #218838;
-        }
-        @media (max-width: 768px) {
-            h1 {
-                font-size: 2.5em;
-            }
-            button {
-                font-size: 1em;
-                padding: 12px 25px;
-            }
-        }
-        @media (max-width: 480px) {
-            h1 {
-                font-size: 2em;
-            }
-            button {
-                font-size: 0.9em;
-                padding: 10px 20px;
-            }
-        }
-    </style>
+    <title>Startseite</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<h1>Konfigurator</h1>
-<button onclick="window.location.href='konfigurator.html'">Konfigurieren</button>
-<button onclick="window.location.href='systemkonfigurator.html'">Systemkonfigurator</button>
+
+    <div class="hintergrund"></div>
+    <img src="media/logo.png" class="logo">
+
+      
+
+
+    <div class="selector">
+        <h1>Konfigurator</h1>
+
+       <div class="auswahlButton">
+            <button id="btn" onclick="window.location.href='konfigurator.html'">Konfigurieren</button>
+            <button id="btn" onclick="window.location.href='modulBerechner.html'">Module Berechnen</button>
+        </div>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="login.js"></script>
+
 </body>
 </html>
