--- a/konfigurator.html
+++ b/konfigurator.html
@@ -6,6 +6,7 @@
   <title>Konfigurator</title>
   <link rel="stylesheet" href="styles.css" />
   <link rel="stylesheet" href="stylesKonfi.css">
+  <link rel="icon" href="media/favicon.ico">
 </head>
 <body>
 
