--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <div class="hintergrund"></div>
-    <img src="media/logo.png" class="logo">
+    <img src="media/leoSystemLogo.png" alt="Logo" />
 
       
 
