--- a/konfigurator.html
+++ b/konfigurator.html
@@ -6,7 +6,7 @@
   <title>Konfigurator</title>
   <link rel="stylesheet" href="styles.css" />
   <link rel="stylesheet" href="stylesKonfi.css">
-  <link rel="icon" href="media/favicon.ico">
+  
 </head>
 <body>
 
@@ -16,7 +16,7 @@
     <!-- From Uiverse.io by Admin12121 -->
     <div class="top-header">
       <div class="logoPage">
-        <img src="media/logo.png" alt="Logo" />
+        <img src="media/leoSystemLogo.png" alt="Logo" />
       </div>
     
       <div class="menu">
